# POLY-ANALYSIS

./: .gitignore  DESIGN_SPEC.md  DSP_SPECIFICATIONS.md  PROJECT_STATUS.md  README.md  TEST_CHECKLIST.md  VST3_INTEGRATION.md  VST3_INTEGRATION_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
PolyAnalysis/: CMakeLists.txt  PolyAnalysis.RPP  PolyAnalysis.cpp  PolyAnalysis.h  PolyAnalysis.sln  README.md  config.h
PolyAnalysis/PolyAnalysis.xcworkspace/: contents.xcworkspacedata
PolyAnalysis/config/: PolyAnalysis-ios.xcconfig  PolyAnalysis-mac.xcconfig  PolyAnalysis-web.mk  PolyAnalysis-win.props
PolyAnalysis/projects/: PolyAnalysis-aax.vcxproj  PolyAnalysis-aax.vcxproj.filters  PolyAnalysis-app.vcxproj  PolyAnalysis-app.vcxproj.filters  PolyAnalysis-clap.vcxproj  PolyAnalysis-clap.vcxproj.filters  PolyAnalysis-vst2.vcxproj  PolyAnalysis-vst2.vcxproj.filters  PolyAnalysis-vst3.vcxproj  PolyAnalysis-vst3.vcxproj.filters  PolyAnalysis-wam-controller.mk  PolyAnalysis-wam-processor.mk
PolyAnalysis/projects/PolyAnalysis-iOS.xcodeproj/: project.pbxproj
PolyAnalysis/projects/PolyAnalysis-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
PolyAnalysis/projects/PolyAnalysis-macOS.xcodeproj/: project.pbxproj
PolyAnalysis/projects/PolyAnalysis-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  (+9 more)
PolyAnalysis/resources/: AUv3Framework.h  IPlugAUViewController_vPolyAnalysis.xib  PolyAnalysis-AAX-Info.plist  PolyAnalysis-AU-Info.plist  PolyAnalysis-CLAP-Info.plist  PolyAnalysis-Pages.xml  PolyAnalysis-VST2-Info.plist  PolyAnalysis-VST3-Info.plist  PolyAnalysis-iOS-AUv3-Info.plist  PolyAnalysis-iOS-Info.plist  PolyAnalysis-iOS-LaunchScreen.storyboard  PolyAnalysis-iOS-MainInterface.storyboard  PolyAnalysis-macOS-AUv3-Info.plist  PolyAnalysis-macOS-AUv3Framework-Info.plist  PolyAnalysis-macOS-Info.plist  PolyAnalysis-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
PolyAnalysis/resources/web/: index.html
PolyAnalysis/resources/web/assets/: index-BNdrH0lg.js
PolyAnalysis/scripts/: makedist-web.sh  prepare_resources-ios.py  prepare_resources-mac.py
(+3 files in other folders)
